--- a/docs/src/components/Hero.astro
+++ b/docs/src/components/Hero.astro
@@ -12,7 +12,7 @@ const Title = 'animare';
         <path d='M20,20 L35,20 L35,80 L20,80 Z M65,20 L80,20 L80,80 L65,80 Z'></path>
       </svg>
     </button>
-    <input class='animare-slider' type='range' min='0' max='1' step='0.01' value='0' />
+    <input class='animare-slider' type='range' min='0' max='1' step='0.001' value='0' />
   </div>
 </div>
 
@@ -55,40 +55,37 @@ const Title = 'animare';
     playSvg.style.d = 'path("M20,20 L35,20 L35,80 L20,80 Z M65,20 L80,20 L80,80 L65,80 Z")';
   };
 
-  const em = (n: number) => `${n}em`;
-  const translateZ = (n: number) => `translateZ(${n}px) `;
-  const translateY = (n: number) => `translateY(${n}px) `;
-  const translateX = (n: number) => `translateX(${n}px) `;
-  const scale = (n: number) => `scale(${n})`;
+  const blur = (v: number) => `blur(${v}px)`;
+  const transform = (x: number, y: number, z: number, rotate: number, scale: number) =>
+    `translate(${x}px, ${y}px) translateZ(${z}px) rotate(${rotate}deg) scale(${scale})`;
 
   const animations: AnimationGroupOptions = {
     to: Array(letters.length).fill(1) as number[],
-    offset: i => (i ? -1700 : 0),
-    duration: 1800,
+    offset: i => (i ? -800 : 0),
+    duration: 1000,
     autoPlay: false,
   };
 
   const onUpdate: GroupOnUpdateCallback = (values, tl) => {
     for (let i = 0; i < values.length; i++) {
-      if (tl.isFirstFrame) {
-        togglePlayPauseIcon(false);
-      }
+      if (tl.isFirstFrame) togglePlayPauseIcon(false);
 
       const t = values[i].value;
-      letters[i].style.marginInline = em(lerp(0, 0, ease.out.back()(t)));
-      letters[i].style.transform =
-        translateZ(lerp(400, 0, ease.out.back()(t))) +
-        translateY(lerp(400, 0, ease.out.elastic(t))) +
-        translateX(lerp(400, 0, ease.out.bounce(t))) +
-        scale(lerp(0.5, 1, ease.out.back(20)(t)));
-      letters[i].style.opacity = `${t}`;
-      letters[i].style.filter = `blur(${lerp(4, 0, t)}px)`;
-      letters[i].style.color = vecToRGB(lerp([244, 96, 54], [255, 255, 255], t));
-      slider!.value = `${tl.progress}`;
 
-      if (tl.isFinished) {
-        togglePlayPauseIcon(true);
-      }
+      const x = lerp(i >= values.length / 2 ? -400 : 400, 0, ease.in.wobble(2)(t)),
+        y = lerp(i >= values.length / 2 ? 200 : -200, 0, ease.out.elastic(t)),
+        z = lerp(400, 0, ease.out.back()(t)),
+        rotate = lerp(i % 2 === 0 ? 90 : -90, 0, ease.in.wobble(6)(t)),
+        scale = lerp(0, 1, ease.in.wobble(4)(t));
+
+      letters[i].style.transform = transform(x, y, z, rotate, scale);
+      letters[i].style.opacity = `${t}`;
+      letters[i].style.filter = blur(lerp(4, 0, t));
+      letters[i].style.color = vecToRGB(lerp([244, 96, 54], [255, 255, 255], t));
+
+      slider.value = `${tl.progress}`;
+
+      if (tl.isFinished) togglePlayPauseIcon(true);
     }
   };
 
@@ -164,7 +161,7 @@ const Title = 'animare';
   }
 
   .slider-container button svg {
-    fill: #e8eaed;
+    fill: var(--secondary);
   }
 
   .slider-container button path {
@@ -172,9 +169,52 @@ const Title = 'animare';
   }
 
   .animare-slider {
+    -webkit-appearance: none;
+    appearance: none;
+    background: transparent;
+    cursor: pointer;
+
     accent-color: var(--secondary);
     width: 100%;
     max-width: 500px;
+  }
+
+  /***** Track Styles *****/
+  /***** Chrome, Safari, Opera, and Edge Chromium *****/
+  .animare-slider::-webkit-slider-runnable-track {
+    background: #a1a1a1;
+    height: 0.1rem;
+    border-radius: 0.5rem;
+  }
+
+  /******** Firefox ********/
+  .animare-slider::-moz-range-track {
+    background: #a1a1a1;
+    height: 0.1rem;
+    border-radius: 0.5rem;
+  }
+
+  /***** Thumb Styles *****/
+  /***** Chrome, Safari, Opera, and Edge Chromium *****/
+  .animare-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    margin-top: -0.5rem;
+    background: var(--secondary);
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  /******** Firefox ********/
+  .animare-slider::-moz-range-thumb {
+    border: none;
+    border-radius: 0;
+    background: var(--secondary);
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
     cursor: pointer;
   }
 
